# themis

./: .gitignore  .release-checklist-v0.2.1.md  .release-checklist.md  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  COOKBOOK.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  Dockerfile  IMPROVEMENT_PLAN.md  MANIFEST.in  PHASE1_SUMMARY.md  PLAN_QUALITY.md  README.md  RELEASE_NOTES_v0.2.0.md  REQUIREMENTS.md  TODOs.md  V4_PLAN.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  report.md  sitemap.xml  skills-lock.json
.claude/: settings.local.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  pypi.yaml  release.yml
ARCHITECTURE/: index.html
CHANGELOG/: index.html
CONTRIBUTING/: index.html
api/backends/: index.html
api/comparison/: index.html
api/evaluate/: index.html
api/metrics/: index.html
api/overview/: index.html
api/presets/: index.html
configs/: math500_demo.yaml
docs/: ADDING_COMPONENTS.md  API_GENERATION.md  ARCHITECTURE.md  ARCHITECTURE_VNEXT.md  BEST_PRACTICES.md  CACHE_INVALIDATION.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  COST_TRACKING.md  DESIGN.md  DESIGN_PATTERNS.md  DIAGRAM.md  EVALUATION.md  EXAMPLES.md  EXTENDING_THEMIS.md  EXTENSION_ARCHITECTURE.md  EXTENSION_QUICK_REFERENCE.md  FAQ.md  LEADERBOARDS.md  LITELLM.md  METADATA_PROPAGATION_DESIGN.md  MIGRATION.md  MULTI_EXPERIMENT_COMPARISON.md  PHILOSOPHY.md  STORAGE.md  faq.md  glossary.md  index.md
docs/api/: backends.md  comparison.md  evaluate.md  metrics.md  overview.md  presets.md
docs/api-reference/: cli.md  config-reports.md  errors.md  extractors.md  index.md  orchestration.md  postgres-storage.md  progress.md  protocols.md  records.md  registry.md  reporting-and-stats.md  root.md  run-planning.md  runtime.md  specs.md  storage.md  telemetry.md  types.md
docs/changelog/: index.md
docs/concepts/: architecture.md  index.md  plugins-and-hooks.md  specs-and-records.md  statistical-comparisons.md  storage-and-resume.md
docs/customization/: backends.md
docs/development/: architecture.md
docs/examples/: advanced.md  finetuning_data.md  getting_started.md  index.md  judge_evaluation.md  langgraph_agent.md  litellm_example.md  projects.md  prompt_engineering.md  rag_pipeline.md
docs/explanation/: api-layer-model.md  artifacts-and-inspection.md  benchmark-adapters.md  case-lifecycle.md  compile-vs-run.md  determinism-and-reproducibility.md  events-stores-and-read-models.md  extension-boundaries.md  failure-retry-and-resume.md  fanout-reduction-parsing-scoring.md  generation-vs-evaluation.md  identity-vs-provenance.md  index.md  metric-families-and-subjects.md  reducer-parser-metric-boundaries.md  reporting-and-read-models.md  reproducibility-and-rejudge.md  run-snapshot.md  store-backend-model.md
docs/faq/: index.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: advanced-orchestration.md  advanced-workflows.md  agent-evals-and-tools.md  analyze-results.md  best-practices.md  builtin-benchmarks.md  ci-cd.md  cli.md  code-benchmarks.md  compare-and-export.md  comparison.md  config-reports.md  configuration.md  countdown-tutorial.md  dataset-loaders.md  dataset-validation.md  evaluation.md  evolve-an-experiment.md  examples.md  external-stage-handoffs.md  faq.md  index.md  interoperability.md  observability.md  plugins.md  project-files.md  provider-engines.md  providers.md  quickcheck.md  releasing.md  reproduce-runs.md  resume-and-inspect.md  scaling-execution.md  storage.md  (+1 more)
docs/project/: index.md  (+5 more)
examples/: 01_hello_world.py  01_quickstart.py  02_project_file.py  03_custom_extractor_metric.py  03_distributed.py  04_compare_models.py  04_comparison.py  05_api_server.py  05_resume_run.py  06_custom_metrics.py  06_hooks_and_timeline.py  07_judge_metric.py  07_provider_ready.py  08_external_stage_handoff.py  09_experiment_evolution.py  09_research_loop.py  10_agent_eval.py  10_logging_demo.py  11_quick_benchmark.py  11_yaml_registry.py  12_error_handling.py  12_iter_and_estimate.py  13_catalog_builtin_benchmark.py  13_custom_storage.py  14_agentic_evaluation.py  14_mcp_openai.py  15_conditional_evaluation.py  README.md
examples-simple/: 01_quickstart.py  02_custom_dataset.py  03_distributed.py  04_comparison.py  05_api_server.py  06_custom_metrics.py  08_resume_cache.py  09_research_loop.py  README.md
experiments/: __init__.py
notebooks/: 01_quickstart.ipynb  02_comparison.ipynb  README.md
scripts/: check_catalog_materialization.py  check_coverage_thresholds.py  inspect_huggingface_dataset.py
search/: search_index.json
tests/: __init__.py  catalog_ids.py  conftest.py  constants.py  factories.py  release.py  test_catalog.py  test_ci_workflows.py  test_docs_examples.py  test_docs_inventory.py  test_docs_site.py  test_exceptions.py  test_import_performance.py  test_optional_dependencies.py  test_package_metadata.py  test_phase1_smoke.py  test_precommit_hook.py  test_public_api.py  test_public_docs.py  test_readme_examples.py  test_release_constants.py  test_release_metadata.py  test_release_scripts.py  test_resume.py  test_smoke.py  test_starter_catalog.py  test_themis_eval_skill_scripts.py
themis/: __init__.py  _optional.py  _replay.py  _version.py  api.py  exceptions.py  overlays.py  prompting.py  session.py  starter_catalog.py
(+1100 files in other folders)
