[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "themis-eval"
version = "4.0.0a0"
description = "Themis v4 Phase 2 execution engine"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Pittawat Taveekitworachai" }]
license = "MIT"
keywords = ["llm", "evaluation", "benchmark", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.12.5",
]

[project.urls]
Repository = "https://github.com/Pittawat2542/themis"
Issues = "https://github.com/Pittawat2542/themis/issues"

[tool.setuptools.packages.find]
include = ["themis*"]

[tool.setuptools.package-data]
"themis" = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
    "mypy>=1.19.1",
]
openai = [
    "openai>=2.24.0,<2.25.0",
]
vllm = [
    "vllm>=0.18.0; platform_system == 'Linux'",
]
langgraph = [
    "langgraph>=1.1.3",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
